--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-transaction-list></app-transaction-list>
+<div class="container" id="app-container">
+  <app-transaction-list></app-transaction-list>
+</div>
