--- a/frontend/src/app/components/create-edit-transaction-dialog/create-edit-transaction-dialog.component.html
+++ b/frontend/src/app/components/create-edit-transaction-dialog/create-edit-transaction-dialog.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="modal-body">
 
-  <form [formGroup]="model">
+  <form [formGroup]="form">
     <div class="form-group row">
       <label class="col-2 col-form-label" for="input-amount">Amount</label>
       <div class="col">
@@ -24,7 +24,7 @@
           </option>
           <option *ngFor="let c of g.categories"
                   [style.background-color]="c.color"
-                  [value]="c.name">{{ category.name }}
+                  [value]="c.name">{{ c.name }}
           </option>
 
         </select>
@@ -37,38 +37,54 @@
         </div>
       </div>
     </div>
-  <div class="form-group row">
-    <label class="col-2 col-form-label" for="input-account">Account</label>
-    <div class="input-group col">
-      <select class="form-control" formControlName="category" id="input-account">
-        <option [value]="null" class="text-dark bg-white">
-          No category
-        </option>
-        <option *ngFor="let c of g.categories"
-                [style.background-color]="c.color"
-                [value]="c.name">{{ category.name }}
-        </option>
+    <div class="form-group row">
+      <label class="col-2 col-form-label" for="input-account">Account</label>
+      <div class="input-group col">
+        <select class="form-control" formControlName="category" id="input-account">
+          <option *ngFor="let a of g.accounts"
+                  [value]="a.id">{{ a.name }}
+          </option>
 
-      </select>
-      <div class="input-group-append">
-        <button class="btn btn-light input-group-text" type="button"
-                id="addaccount-button" data-toggle="popover"
-                title="Add a category">
-          <span class="oi oi-plus"></span>
-        </button>
+        </select>
+        <div class="input-group-append">
+          <button class="btn btn-light input-group-text" type="button"
+                  id="addaccount-button" data-toggle="popover"
+                  title="Add a category">
+            <span class="oi oi-plus"></span>
+          </button>
+        </div>
       </div>
     </div>
-  </div>
     <div class="form-group row">
       <label class="col-2 col-form-label">Date</label>
       <div class="col">
         <div class="input-group">
-          <input type="date" class="form-control col" formControlName="timestampDate" required>
+          <input type="text" ngbDatepicker #d="ngbDatepicker" class="form-control col" formControlName="timestampDate" required>
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary" (click)="d.toggle()" type="button">
+              <span class="oi oi-calendar"></span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group row">
+      <label class="col-2 col-form-label">Time</label>
+      <div class="col">
+        <div class="input-group">
           <input type="time" class="form-control col" formControlName="timestampTime" required>
         </div>
       </div>
     </div>
-    <!-- TODO Notes and recurrence, add buttons for weekly, monthly -->
+    <div class="form-group row">
+      <label class="col-2 col-form-label" for="input-notes">Notes</label>
+      <div class="col">
+        <input type="text"
+               class="form-control" formControlName="notes" id="input-notes"
+               required>
+      </div>
+    </div>
+    <!-- TODO Recurrence, add buttons for weekly, monthly -->
   </form>
 
 </div>
