--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="container" id="app-container">
   <app-transaction-list></app-transaction-list>
+  <!-- TODO implement as seperate page using router -->
 </div>
