--- a/frontend/src/app/components/create-edit-transaction-dialog/create-edit-transaction-dialog.component.html
+++ b/frontend/src/app/components/create-edit-transaction-dialog/create-edit-transaction-dialog.component.html
@@ -12,7 +12,7 @@
     <div class="form-group row">
       <label class="col-2 col-form-label" for="input-amount">Amount</label>
       <div class="input-group col">
-        <input type="number" step="0.01" min="0.01"
+        <input type="number" step="0.01"
                class="form-control" formControlName="amount" id="input-amount"
                required>
         <div class="input-group-append">
