--- a/frontend/src/app/components/create-edit-transaction-dialog/create-edit-transaction-dialog.component.html
+++ b/frontend/src/app/components/create-edit-transaction-dialog/create-edit-transaction-dialog.component.html
@@ -25,7 +25,7 @@
     </div>
     <div class="form-group row">
       <label class="col-2 col-form-label" for="input-account">Account</label>
-      <div class="input-group col">
+      <div class="col">
         <select
           class="form-control custom-select" formControlName="account" id="input-account"
           required>
@@ -33,13 +33,6 @@
                   [value]="a.id">{{ a.name }}
           </option>
         </select>
-        <div class="input-group-append">
-          <button class="btn btn-light input-group-text" type="button"
-                  id="addaccount-button" data-toggle="popover"
-                  title="Add a category">
-            <span class="oi oi-plus"></span>
-          </button>
-        </div>
         <div class="invalid-feedback">
           Please select an account.
         </div>
@@ -47,7 +40,7 @@
     </div>
     <div class="form-group row">
       <label class="col-2 col-form-label" for="input-category">Category</label>
-      <div class="input-group col">
+      <div class="col">
         <select
           class="form-control custom-select" formControlName="category" id="input-category">
           <option [value]="null" class="text-dark bg-white">
@@ -58,13 +51,6 @@
                   [value]="c.name">{{ c.name }}
           </option>
         </select>
-        <div class="input-group-append">
-          <button class="btn btn-light input-group-text" type="button"
-                  id="addcategory-button" data-toggle="popover"
-                  title="Add a category">
-            <span class="oi oi-plus"></span>
-          </button>
-        </div>
       </div>
     </div>
     <div class="form-group row">
