--- a/frontend/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontend/src/app/components/transaction-list/transaction-list.component.html
@@ -18,13 +18,16 @@
 </nav>
 
 <!-- TODO Account information header -->
-
-<div *ngFor="let t of (g.transactions | searchFilter:searchTerm)" class="row transaction" (click)="editTransaction(t)">
+<div *ngFor="let t of (g.transactions | searchFilter:searchTerm | recurrence | sortTransactions)"
+     class="row transaction" (click)="editTransaction(t)">
   <span class="col-2 col-md-3">
     <span class="d-none d-md-inline">{{ t.timestamp | date:'longDate' }}</span>
     <span class="d-md-none">{{ t.timestamp | date:'MMM d' }}</span>
     <br>
     {{ t.timestamp | date:'HH:mm' }}
+  </span>
+  <span class="col-2">
+    {{ t.category }}
   </span>
   <span class="col">
     {{ t.notes }}
@@ -35,6 +38,10 @@
     <span [class.text-success]="t.amount > 0" [class.text-danger]="t.amount < 0">{{ t.amount | currency:'EUR' }}</span>
   </span>
 </div>
-<div class="row">
-  <span class="col text-right text-large">{{ g.totalAccountBalance | currency:'EUR' }}</span>
+<div *ngIf="g.transactions.length === 0" class="text-muted">
+  No transactions found.
+</div>
+<hr class="double-line">
+<div class="row" *ngIf="searchTerm===''">
+  <strong class="col text-right text-large">{{ g.transactions | recurrence | totalAccountBalance | currency:'EUR' }}</strong>
 </div>
