--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,3 @@
 <div class="container" id="app-container">
-  <app-transaction-list></app-transaction-list>
-  <!-- TODO implement as seperate page using router -->
+  <router-outlet></router-outlet>
 </div>
