--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,22 @@
+<nav class="navbar navbar-dark bg-dark fixed-top">
+  <h1 class="navbar-brand">
+    GlanceAction
+  </h1>
+  <form class="form-inline" [class.d-none]="router.url !== '/'">
+    <div class="input-group">
+      <input type="search" placeholder="Search transactions" class="form-control" id="searchbox" [(ngModel)]="search.term" [ngModelOptions]="{standalone: true}">
+      <div class="input-group-append">
+        <button type="reset" class="btn btn-secondary" (click)="search.reset()">
+          <span class="oi oi-x"></span>
+        </button>
+      </div>
+    </div>
+  </form>
+  <button type="button" class="btn btn-primary" routerLink="/create">
+    <span class="oi oi-plus"></span>
+  </button>
+</nav>
+
 <div class="container" id="app-container">
   <router-outlet></router-outlet>
 </div>
