--- a/frontend/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontend/src/app/components/transaction-list/transaction-list.component.html
@@ -1,36 +1,17 @@
-<nav class="navbar navbar-dark bg-dark fixed-top">
-  <h1 class="navbar-brand">
-    GlanceAction
-  </h1>
-  <form class="form-inline">
-    <div class="input-group">
-      <input type="search" placeholder="Search transactions" class="form-control" id="searchbox" [(ngModel)]="searchTerm" [ngModelOptions]="{standalone: true}">
-      <div class="input-group-append">
-        <button type="reset" class="btn btn-secondary" (click)="searchTerm=''">
-          <span class="oi oi-x"></span>
-        </button>
-      </div>
-    </div>
-  </form>
-  <button type="button" class="btn btn-primary" (click)="createTransaction()">
-    <span class="oi oi-plus"></span>
-  </button>
-</nav>
-
-<h3 *ngIf="searchTerm && (g.transactions | searchFilter:searchTerm).length !== 0">
-  {{ (g.transactions | recurrence | searchFilter:searchTerm).length }} search results
-  <small class="text-muted">for "{{ searchTerm }}"</small>
+<h3 *ngIf="search.term && (g.transactions | searchFilter:search.term).length !== 0">
+  {{ (g.transactions | recurrence | searchFilter:search.term).length }} search results
+  <small class="text-muted">for "{{ search.term }}"</small>
 </h3>
 
-<div class="row" *ngIf="!searchTerm">
+<div class="row" *ngIf="!search.term">
   <div class="text-right w-100">
     <span class="text-muted">Beginning Balance:</span>
     <strong class="col text-right text-large">{{ g.transactions | empty | totalAccountBalance | currency:'EUR' }}</strong>
   </div>
 </div>
 <!-- TODO category colors as left border -->
-<div *ngFor="let t of (g.transactions | searchFilter:searchTerm | recurrence | sortTransactions)"
-     class="row transaction" (click)="editTransaction(t)">
+<div *ngFor="let t of (g.transactions | searchFilter:search.term | recurrence | sortTransactions)"
+     class="row transaction" [routerLink]="['/edit', t.id]">
   <span class="col-2 col-md-3">
     <span class="d-none d-md-inline">{{ t.timestamp | date:'longDate' }}</span>
     <span class="d-md-none">{{ t.timestamp | date:'MMM d' }}</span>
@@ -52,15 +33,15 @@
     <span [class.text-success]="t.amount > 0" [class.text-danger]="t.amount < 0">{{ t.amount | currency:'EUR' }}</span>
   </span>
 </div>
-<div *ngIf="!searchTerm && g.transactions.length === 0" class="text-muted">
+<div *ngIf="!search.term && g.transactions.length === 0" class="text-muted">
   No transactions found.
 </div>
-<div *ngIf="searchTerm && (g.transactions | searchFilter:searchTerm).length === 0" class="text-muted">
-  No transactions matching "{{ searchTerm }}" found. Create one by clicking the <span class="oi oi-plus"></span> in the upper
+<div *ngIf="search.term && (g.transactions | searchFilter:search.term).length === 0" class="text-muted">
+  No transactions matching "{{ search.term }}" found. Create one by clicking the <span class="oi oi-plus"></span> in the upper
   right corner.
 </div>
-<hr class="double-line" *ngIf="!searchTerm">
-<div class="row" *ngIf="!searchTerm">
+<hr class="double-line" *ngIf="!search.term">
+<div class="row" *ngIf="!search.term">
   <div class="text-right w-100">
     <span class="text-muted">Ending Balance:</span>
     <strong class="col text-large">{{ g.transactions | recurrence | totalAccountBalance | currency:'EUR' }}</strong>
