--- a/frontend/src/scss/_settings.scss
+++ b/frontend/src/scss/_settings.scss
@@ -1,6 +1,12 @@
 $text-color: #212529;
+$yellow: #ffaf2e;
 
 $dark-grey: #4c4c4c;
 $medium-grey: #9a9a9a;
 $light-grey: #dadada;
 $smoke: #fafafa;
+
+// Bootstrap settings
+$theme-colors: (
+  "primary": $yellow,
+);
