--- a/frontend/src/app/components/settings/settings.component.html
+++ b/frontend/src/app/components/settings/settings.component.html
@@ -1,3 +1,124 @@
-<p>
-  settings works!
-</p>
+<ngb-tabset>
+  <ngb-tab title="Accounts">
+    <ng-template ngbTabContent>
+      <br>
+      <div class="row no-gutters mb-2">
+        <div class="col-5 col-md-8 text-muted mr-1">
+          Account Name
+        </div>
+        <div class="col-5 col-md-3 text-muted mr-1">
+          Initial Account Balance
+        </div>
+      </div>
+      <div class="form-group row no-gutters" *ngFor="let a of g.accounts">
+        <div class="col-5 col-md-8 mr-1">
+          <input type="text"
+                 class="form-control"
+                 (change)="updateAccount(a)"
+                 [(ngModel)]="a.name">
+        </div>
+        <div class="input-group col-5 col-md-3 mr-1">
+          <input type="number" step="0.01"
+                 class="form-control"
+                 (change)="updateAccount(a)"
+                 [(ngModel)]="a.initialBalance">
+          <div class="input-group-append">
+            <span class="input-group-text">€</span>
+          </div>
+        </div>
+        <div class="col text-right">
+          <button class="btn btn-outline-secondary" type="button"
+                  (click)="deleteAccount(a)">
+            <span class="oi oi-trash"></span>
+          </button>
+        </div>
+      </div>
+      <div class="form-group row no-gutters">
+        <div class="col-5 col-md-8 mr-1">
+          <input type="text"
+                 class="form-control" placeholder="Create a new account"
+                 [(ngModel)]="newAccountName">
+        </div>
+        <div class="input-group col-5 col-md-3 mr-1">
+          <input type="number" step="0.01"
+                 class="form-control"
+                 [(ngModel)]="newAccountInitialBalance">
+          <span class="input-group-append">
+            <span class="input-group-text">€</span>
+          </span>
+        </div>
+        <div class="col text-right">
+          <button class="btn btn-primary" type="button"
+                  [disabled]="!newAccountName || !newAccountInitialBalance"
+                  (click)="createAccount()">
+            <span class="oi oi-plus"></span>
+          </button>
+        </div>
+      </div>
+    </ng-template>
+  </ngb-tab>
+
+  <ngb-tab title="Categories">
+    <ng-template ngbTabContent>
+      <br>
+      <div class="row no-gutters mb-2">
+        <div class="col-5 col-md-8 mr-1">
+          <div class="text-muted">
+            Category Name
+          </div>
+        </div>
+        <div class="input-group col-5 col-md-3 mr-1">
+          <div class="text-muted">
+            Category Color
+          </div>
+        </div>
+      </div>
+      <div class="form-group row no-gutters" *ngFor="let c of g.categories">
+        <div class="col-5 col-md-8 mr-1">
+          <input type="text"
+                 class="form-control"
+                 (change)="updateCategory(c, $event)"
+                 [value]="c.name">
+        </div>
+        <div class="col-5 col-md-3 mr-1">
+          <input type="color"
+                 class="form-control"
+                 (change)="updateCategory(c, $event)"
+                 [value]="c.color">
+        </div>
+        <div class="col text-right">
+          <button class="btn btn-outline-secondary" type="button"
+                  (click)="deleteCategory(c)">
+            <span class="oi oi-trash"></span>
+          </button>
+        </div>
+      </div>
+      <div class="form-group row no-gutters">
+        <div class="col-5 col-md-8 mr-1">
+          <input type="text"
+                 class="form-control" placeholder="Create a new category"
+                 [(ngModel)]="newCategoryName">
+        </div>
+        <div class="col-5 col-md-3 mr-1">
+          <input type="color"
+                 class="form-control"
+                 [(ngModel)]="newCategoryColor">
+        </div>
+        <div class="col text-right">
+          <button class="btn btn-primary" type="button"
+                  [disabled]="!newCategoryName"
+                  (click)="createCategory()">
+            <span class="oi oi-plus"></span>
+          </button>
+        </div>
+      </div>
+    </ng-template>
+  </ngb-tab>
+</ngb-tabset>
+
+<div class="row no-gutters">
+  <div class="col ml-1 d-flex justify-content-end">
+    <button type="button" class="btn btn-secondary" (click)="location.back()">Back</button>
+  </div>
+</div>
+
