--- a/frontend/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontend/src/app/components/transaction-list/transaction-list.component.html
@@ -3,15 +3,31 @@
   <small class="text-muted">for "{{ search.term }}"</small>
 </h3>
 
-<div class="row" *ngIf="!search.term">
+<div class="row mb-2" *ngIf="!search.term">
   <div class="text-right w-100">
     <span class="text-muted">Beginning Balance:</span>
     <strong class="col text-right text-large">{{ g.transactions | empty | totalAccountBalance | currency:'EUR' }}</strong>
   </div>
 </div>
-<!-- TODO category colors as left border -->
+<div class="row mb-2">
+  <div class="col-2 col-md-3 text-muted">
+    Date
+  </div>
+  <div class="col col-lg-2 text-muted">
+    Category
+    <span class="d-md-none">/ Notes</span>
+  </div>
+  <div class="col d-none d-md-inline text-muted">
+    Notes
+  </div>
+  <div class="col-4 col-lg-2 text-right text-muted">
+    <span class="d-none d-sm-inline">Account /</span>
+    Amount
+  </div>
+</div>
 <div *ngFor="let t of (g.transactions | searchFilter:search.term | recurrence | sortTransactions)"
-     class="row transaction" [routerLink]="['/edit', t.id]">
+     class="row transaction" [style.border-left-color]="t.category === null ? 'white' : g.getCategory(t.category).color"
+     [routerLink]="['/edit', t.id]">
   <span class="col-2 col-md-3">
     <span class="d-none d-md-inline">{{ t.timestamp | date:'longDate' }}</span>
     <span class="d-md-none">{{ t.timestamp | date:'MMM d' }}</span>
@@ -33,12 +49,14 @@
     <span [class.text-success]="t.amount > 0" [class.text-danger]="t.amount < 0">{{ t.amount | currency:'EUR' }}</span>
   </span>
 </div>
-<div *ngIf="!search.term && g.transactions.length === 0" class="text-muted">
-  No transactions found.
+<div *ngIf="!search.term && g.transactions.length == 0" class="text-muted">
+  No transactions found. Create one now:
+  <button class="btn btn-primary" routerLink="/create">
+    <span class="oi oi-plus"></span>
+  </button>
 </div>
 <div *ngIf="search.term && (g.transactions | searchFilter:search.term).length === 0" class="text-muted">
-  No transactions matching "{{ search.term }}" found. Create one by clicking the <span class="oi oi-plus"></span> in the upper
-  right corner.
+  No transactions matching "{{ search.term }}" found.
 </div>
 <hr class="double-line" *ngIf="!search.term">
 <div class="row" *ngIf="!search.term">
