--- a/frontend/src/app/components/create-edit-transaction/create-edit-transaction.component.html
+++ b/frontend/src/app/components/create-edit-transaction/create-edit-transaction.component.html
@@ -95,7 +95,7 @@
           </option>
         </select>
       </div>
-      <div class="input-group col"
+      <div class="input-group col pr-0"
            *ngIf="form.value.recurrenceType === recurrenceType.Custom">
         <div class="input-group-prepend">
           <span class="input-group-text">Every</span>
@@ -107,7 +107,7 @@
         </div>
       </div>
     </div>
-    <div class="input-group col-10 offset-2 col-lg-3 offset-lg-0"
+    <div class="input-group col-10 offset-2 col-lg-3 offset-lg-0 mt-2 mt-lg-0"
          *ngIf="form.value.recurrenceType !== recurrenceType.None">
       <input type="number"
              class="form-control" formControlName="recurrenceAmount">
