--- a/frontend/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontend/src/app/components/transaction-list/transaction-list.component.html
@@ -62,6 +62,6 @@
 <div class="row" *ngIf="!search.term && g.transactions.length > 0">
   <div class="text-right w-100">
     <span class="text-muted">Ending Balance:</span>
-    <strong class="col text-large">{{ g.transactions | recurrence | totalAccountBalance | currency:'EUR' }}</strong>
+    <strong class="col text-large" id="ending-balance">{{ g.transactions | recurrence | totalAccountBalance | currency:'EUR' }}</strong>
   </div>
 </div>
