FE: Fix some unit tests

--- a/frontend/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontend/src/app/components/transaction-list/transaction-list.component.html
@@ -36,11 +36,11 @@
   </span>
   <span class="col col-lg-2">
     {{ t.category === 0 ? '' : g.getCategory(t.category).name }}
-    <div class="d-md-none">
+    <div class="d-md-none text-muted font-weight-light">
       {{ t.notes }}
     </div>
   </span>
-  <span class="col d-none d-md-inline">
+  <span class="col d-none d-md-inline text-muted font-weight-light">
     {{ t.notes }}
   </span>
   <span class="col-4 col-lg-2 text-right">
