--- a/frontend/src/app/components/transaction-list/transaction-list.component.html
+++ b/frontend/src/app/components/transaction-list/transaction-list.component.html
@@ -9,7 +9,7 @@
     <strong class="col text-right text-large">{{ g.transactions | empty | totalAccountBalance | currency:'EUR' }}</strong>
   </div>
 </div>
-<div class="row mb-2" *ngIf="!search.term && g.transactions.length > 0">
+<div class="row mt-4" *ngIf="!search.term && g.transactions.length > 0">
   <div class="col-2 col-md-3 text-muted">
     Date
   </div>
@@ -25,6 +25,7 @@
     Amount
   </div>
 </div>
+<hr class="mt-2 mb-2">
 <div *ngFor="let t of (g.transactions | searchFilter:search.term | recurrence | sortTransactions)"
      class="row transaction" [style.border-left-color]="t.category === 0 ? 'white' : g.getCategory(t.category).color"
      [routerLink]="['/edit', t.id]">
